--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,8 @@ dependencies:
   simple_barcode_scanner: ^0.1.1
   image_picker: ^1.1.2
   intl: ^0.19.0
+  file_picker: ^8.0.5
+  flutter_barcode_scanner: ^2.0.0
 
 dev_dependencies:
   flutter_test:
